# hedis

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Internal.hs  Main.hs  PubSub.hs  README.md  Reply.hs  Request.hs  TODO.md  cabal.haskell-ci  cabal.project  commands.json  flake.nix  hedis.cabal  redis-client.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.3.yaml  stack-8.4.yaml  stack-9.2.yaml  stack-head.yaml  stack.yaml
.github/workflows/: cluster-test.yml  haskell-ci.yml  test.yml
benchmark/: Benchmark.hs
benchmark/competition/: Benchmark.hs
codegen/: GenCmds.hs  commands.json
src/Database/: Redis.hs
src/Database/Redis/: Cluster.hs  CommandTemplates.hs  Commands.hs  Connection.hs  ConnectionContext.hs  Core.hs  Cursors.hs  Hooks.hs  Internal.hs  ManualCommands.hs  Protocol.hs  ProtocolPipelining.hs  PubSub.hs  PubSub.hs-boot  Reply.hs  Request.hs  Sentinel.hs  Transactions.hs  Types.hs  URL.hs
src/Database/Redis/Cluster/: Command.hs  HashSlot.hs
src/Database/Redis/Core/: Internal.hs
src/Database/Redis/ManualCommands/: BF.hs  CF.hs  Cms.hs  FT.hs  Function.hs  JSON.hs  Tdigest.hs  Topk.hs  Ts.hs  Wait.hs
test/: ClusterMain.hs  Main.hs  MainHooks.hs  MainRedis7.hs  MainRedis8.hs  ManualPubSub.hs  PubSubTest.hs  Test.hs  Tests.hs  run-test.sh
