name:               redis-client
version:            0.1
synopsis:           A client for the Redis datastore.
Description:        TODO cabal description
license:            BSD3
license-file:       LICENSE
author:             Falko Peters
maintainer:         falko.peters@gmail.com
copyright:          Copyright (c) 2011 Falko Peters
category:           Database

build-type:         Simple

  
-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version: >=1.2


library
  hs-source-dirs:   src
  ghc-options:      -Wall -fno-warn-unused-do-bind
  exposed-modules:  Database.Redis, Database.Redis.Types
  build-depends:    base >= 4,
                    network >= 2,
                    bytestring >= 0.9,
                    mtl >= 2,
                    attoparsec >= 0.8,
                    containers >= 0.3,
                    template-haskell >= 2.5 && <= 2.6

  other-modules:    Database.Redis.Internal,
                    Database.Redis.PubSub,
                    Database.Redis.Reply,
                    Database.Redis.Request,
                    Database.Redis.CommandTemplates


source-repository head
  type:     git
  location: https://github.com/informatikr/redis-client
