name:               redis-client
version:            0.1
synopsis:           A client library for the Redis datastore.
Description:        TODO cabal description
license:            BSD3
license-file:       LICENSE
author:             Falko Peters
maintainer:         falko.peters@gmail.com
copyright:          Copyright (c) 2011 Falko Peters
category:           Database
build-type:         Simple
cabal-version:      >=1.8

bug-reports: https://github.com/informatikr/redis-client/issues

extra-source-files:
    commands.json

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Database.Redis,
                    Database.Redis.Types
  build-depends:    aeson == 0.4.*,
                    attoparsec >= 0.8,
                    base >= 4,
                    bytestring >= 0.9,
                    bytestring-lexing == 0.2.*,
                    containers >= 0.3,
                    mtl >= 2,
                    network >= 2,
                    template-haskell >= 2.5,
                    text == 0.11.1.*,
                    unordered-containers == 0.1.4.*,
                    vector == 0.9

  other-modules:    Database.Redis.Internal,
                    Database.Redis.PubSub,
                    Database.Redis.Reply,
                    Database.Redis.Request,
                    Database.Redis.Commands,
                    Database.Redis.ManualCommands

source-repository head
  type:     git
  location: https://github.com/informatikr/redis-client
