name:               redis-client
version:            0.1
synopsis:           A client library for the Redis datastore.
Description:        TODO cabal description
license:            BSD3
license-file:       LICENSE
author:             Falko Peters
maintainer:         falko.peters@gmail.com
copyright:          Copyright (c) 2011 Falko Peters
category:           Database
build-type:         Simple
cabal-version:      >=1.8

bug-reports: https://github.com/informatikr/redis-client/issues

extra-source-files:
    commands.json

flag benchmark
    description: Build the benchmark executable.
    default: False

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  ghc-prof-options: -auto-all
  exposed-modules:  Database.Redis,
                    Database.Redis.Types
  build-depends:    attoparsec >= 0.8,
                    base >= 4,
                    bytestring >= 0.9,
                    bytestring-lexing == 0.2.*,
                    mtl >= 2,
                    network >= 2

  other-modules:    Database.Redis.Internal,
                    Database.Redis.PubSub,
                    Database.Redis.Reply,
                    Database.Redis.Request,
                    Database.Redis.Commands,
                    Database.Redis.ManualCommands

executable redis-client-benchmark
    buildable = flag(benchmark)
    main-is: benchmark/Benchmark.hs
    other-modules:
    ghc-options: -Wall -rtsopts
    ghc-prof-options: -auto-all
    build-depends:
        base >= 4,
        mtl == 2.0.*,
        redis-client == 0.1.*,
        time >= 1.2

source-repository head
  type:     git
  location: https://github.com/informatikr/redis-client
